tests/snapshots/e2e__allow_policies_apply_only_to_own_dependency_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== internal/child.proto ===
syntax = "proto3";
message ChildInternal {}

=== public/child.proto ===
syntax = "proto3";
message ChildPublic {}

=== public/service.proto ===
syntax = "proto3";
message Service {}
