tests/snapshots/e2e__allow_policies_merged_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== foo.proto ===
syntax = "proto3";
message Foo {}

=== from_foo/model.proto ===
syntax = "proto3";
message Model {}

=== from_root/service.proto ===
syntax = "proto3";
message Service {}
