tests/snapshots/e2e__allow_policies_with_prune_include_import_tree_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== internal/common.proto ===
syntax = "proto3";
message Common {}

=== public/service.proto ===
syntax = "proto3";
import "internal/common.proto";
import "shared.proto";
message Service {}

=== shared.proto ===
syntax = "proto3";
message Shared {}
