tests/snapshots/e2e__content_roots_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== internal/secret.proto ===
syntax = "proto3";
message Secret {}

=== model.proto ===
syntax = "proto3";
message Model {}

=== service.proto ===
syntax = "proto3";
message Service {}
