tests/snapshots/e2e__deny_policies_apply_to_dependency_subtree_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== public/child.proto ===
syntax = "proto3";
message ChildPublic {}

=== public/service.proto ===
syntax = "proto3";
message Service {}
