tests/snapshots/e2e__deny_policies_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== public/service.proto ===
syntax = "proto3";
message Service {}
