tests/snapshots/e2e__deny_policies_with_prune_exclude_matching_files_and_deps_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== public/service.proto ===
syntax = "proto3";
import "internal/admin.proto";
import "shared/public.proto";
message Service {}

=== shared/public.proto ===
syntax = "proto3";
message Public {}
