tests/snapshots/e2e__dependency_root_merged_duplicate_deps_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== dep1.proto ===
syntax = "proto3";
message Dep1 {}

=== dep2.proto ===
syntax = "proto3";
message Dep2 {}
