tests/snapshots/e2e__dependency_root_nested_descriptor_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== api.proto ===
syntax = "proto3";
message Api {}

=== dep.proto ===
syntax = "proto3";
message Dep {}
