tests/snapshots/e2e__dependency_root_scoped_rules_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== allowed/service.proto ===
syntax = "proto3";
message Service {}
