tests/snapshots/e2e__duplicate_dep_content_roots_and_policies_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== bar.proto ===
syntax = "proto3";
message Bar {}

=== consumer.proto ===
syntax = "proto3";
message Consumer {}
